--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 
   <!-- Open Graph -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="PunkSter | Pixel Art NFT on Ethereum" />
-  <meta property="og:description" content="10,000 unique pixel-style NFTs living on the Ethereum blockchain." />
+  <meta property="og:title" content="PunkSter | Pixel Art NFTs on Ethereum" />
+  <meta property="og:description" content="1000 unique pixel-style NFTs living on the Ethereum blockchain." />
   <meta property="og:image" content="./images/preview.png" />
   <meta property="og:url" content="https://punkster.art" />
   <meta property="og:type" content="website" />
 
   <!-- Twitter Cards -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="PunkSter | Pixel Art NFT on Ethereum" />
+  <meta name="twitter:title" content="PunkSter | Pixel Art NFTs on Ethereum" />
   <meta name="twitter:description" content="1000 Pixel-Style Rare NFTs on the Ethereum blockchain." />
   <meta name="twitter:image" content="https://punkster.art/images/preview.png" />
   <meta name="twitter:site" content="@PunkSterNFT" />
 
-  <title>PunkSter | Pixel Art NFT on Ethereum</title>
+  <title>PunkSter | Pixel Art NFTs on Ethereum</title>
 
   <link rel="stylesheet" href="styles.css" />
   <link rel="shortcut icon" href="favicon.ico">
