--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </section>
 
     <section class="preview">
-      <img src="./images/preview.png" alt="PunkSter Preview" />
+      <img src="./images/punkster-preview.gif" alt="PunkSter Preview" />
     </section>
 
     <section class="about">
