--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
       <ul>
       <br>
         <li><a href="https://discord.gg/F4H4vhBffh" target="_blank">Discord</a></li>
+        <li><a href="https://x.com/punksterartnft" target="_blank">Twitter/X</a></li>
       </ul>
     </section>
 
