--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
       <br>
         <li><a href="https://discord.gg/F4H4vhBffh" target="_blank">Discord</a></li>
         <li><a href="https://x.com/punksterartnft" target="_blank">Twitter/X</a></li>
+        <li><a href="https://t.me/punkstergang" target="_blank">Telegram</a></li>
       </ul>
     </section>
 
