update for punkster

--- a/index.html
+++ b/index.html
@@ -39,7 +39,14 @@
       <h2 class="glitch-text"> <img src="./images/punk.png" alt="PunkSter Preview" />PunkSter</h2>
 
     </header>
-
+        <section class="info">
+      <p>Now PunkSter on Solana Powered by <a href="https://pump.fun/" target="_blank">PUMP.FUN</a></p>
+      <p><strong>Standard:</strong> </p>
+      <p><strong>Max Supply:</strong> </p>
+      <p><strong>Name:</strong> PunkSter</p>
+      <p><strong>Symbol:</strong> PUNK</p>
+    <strong>Contract Address:</strong><a href="https://solscan.io/" target="_blank"> <code><b>TBA</b></code></a>
+    </section>
     <section class="info">
       <p>1000 Unique & Rare Pixel Art NFTs on Ethereum</p>
       <p><strong>Standard:</strong> ERC-721</p>
