--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <p><strong>Max Supply:</strong> </p>
       <p><strong>Name:</strong> PunkSter</p>
       <p><strong>Symbol:</strong> PUNK</p>
-    <strong>Contract Address:</strong><a href="https://solscan.io/token/PjNQunzW8qGsq6Ye19PswiYDWcap2C44fiC4esApump" target="_blank"> <code><b>PjNQunzW8qGsq6Ye19PswiYDWcap2C44fiC4esApump</b></code></a>
+    <strong>Contract Address:</strong><a href="https://solscan.io/token/#" target="_blank"> <code><b>TBA</b></code></a>
     </section>
     <section class="info">
       <p>1000 Unique & Rare Pixel Art NFTs on Ethereum</p>
