--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <p><strong>Max Supply:</strong> </p>
       <p><strong>Name:</strong> PunkSter</p>
       <p><strong>Symbol:</strong> PUNK</p>
-    <strong>Contract Address:</strong><a href="https://solscan.io/token/#" target="_blank"> <code><b>TBA</b></code></a>
+    <strong>Contract Address:</strong><a href="https://solscan.io/token/7NgTt3TcP6DKHHELksXazoiVuXUBLF5A4dDxqKjfpump" target="_blank"> <code><b>7NgTt3TcP6DKHHELksXazoiVuXUBLF5A4dDxqKjfpump</b></code></a>
     </section>
     <section class="info">
       <p>1000 Unique & Rare Pixel Art NFTs on Ethereum</p>
